correção de bugs e finalização dos cards

--- a/index.html
+++ b/index.html
@@ -184,13 +184,23 @@
                     </main>
 
                 </div>
-
-
-
                
+                <div class="secao__card__conteudo__card">
 
-                
+                    <header>
+                       <img src="assets/imagens/astronaut.png" alt="">
+                    </header>
 
+                    <main>
+                        <h4>Metodologia Diferenciada</h4>
+
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum harum nesciunt 
+                            excepturi voluptatem dolorem voluptas numquam velit! Nobis impedit repudiandae 
+                            saepe magni reiciendis dolore, labore a excepturi quibusdam. Voluptates, soluta!
+                        </p>
+                    </main>
+
+                </div>
             </main>
 
 
