--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets/style/home/secao__sobre/secao__sobre.css">
     <link rel="stylesheet" href="assets/style/home/secao__sobre/secao__sobre__responsive.css">
     <link rel="stylesheet" href="assets/style/home/secao__diferenciais/secao__diferenciais.css">
+    <link rel="stylesheet" href="assets/style/home/secao__diferenciais/secao__diferennciais__responsivo.css">
     <link rel="stylesheet" href="assets/style/home/secao_formulario/secao_formulario.css">
     <link rel="stylesheet" href="assets/style/home/secao_formulario/secao_formulario_responsive.css">
     <link rel="stylesheet" href="assets/style/home/footer/footer.css">
