--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
 
         <!-- seção apresentação -->
         <section id="carouselExample" class="carousel slide carousel w-100" data-bs-ride="carousel">
-            <!-- <video class="video-carousel"autoplay loop muted>
-                <source src="./assets/videos/videoplayback.mp4" type="video/mp4">
-              </video> -->
+            <video class="video-carousel1"autoplay loop muted>
+                <source src="./assets/videos/VideoCelular.mp4" type="video/mp4">
+              </video>
+              <video class="video-carousel2"autoplay loop muted>
+                <source src="./assets/videos/VideoDoClubePC.mp4" type="video/mp4">
+              </video>
                 <div class="carousel-inner w-100 d-flex  align-items-center">
 
                     <div class="carousel-item active baner__apresentação__geral baner__apresentação--inicial">
@@ -197,7 +200,7 @@
 
                 </div>
                
-                <div class="secao__card__conteudo__card">
+                <div class="secao__card__conteudo__card  ultimo-card">
 
                     <header>
                        <img src="assets/imagens/astronaut.png" alt="">
