--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <ul class="nav__bar__lista" >
 
-                <li class="nav__bar__lista__iten"><a href="./Pages/sobre.html">Sobre</a></li>
+                <li class="nav__bar__lista__iten"><a href="Pages/Sobre.html">Sobre</a></li>
                 <li class="nav__bar__lista__iten"><a href="#">Atividades</a></li>
                 <li class="nav__bar__lista__iten"><a href="#">Conquistas</a></li>
                 <li class="nav__bar__lista__iten"><a href="#">Contato</a></li>
