--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <ul class="nav__bar__lista" >
 
-                <li class="nav__bar__lista__iten"><a href="Pages/Sobre.html">Sobre</a></li>
+                <li class="nav__bar__lista__iten"><a href="./Pages/sobre.html">Sobre</a></li>
                 <li class="nav__bar__lista__iten"><a href="#">Atividades</a></li>
                 <li class="nav__bar__lista__iten"><a href="#">Conquistas</a></li>
                 <li class="nav__bar__lista__iten"><a href="#">Contato</a></li>
@@ -553,7 +553,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="assets/script/responsivo__nav__bar.js" ></script>
+    <script src="assets/script/nav__bar/responsivo__nav__bar.js" ></script>
 
 </body>
 </html>
